--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,10 +8,10 @@
 html,
 body {
   max-width: 100vw;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 body {
-overflow-x: hidden;
+  overflow-x: hidden;
 }
 a {
   color: inherit;
@@ -23,21 +23,23 @@ a {
   z-index: 1;
 }
 .main_container:after {
-  content:'';
+  content: "";
   position: absolute;
   z-index: -1;
   width: 80%;
   right: 0;
   bottom: -40px;
   top: 0;
-  background: linear-gradient(358.89deg, rgba(217, 217, 217, 0.65) -65.27%, rgba(217, 217, 217, 0) 87.19%);
-
+  background: linear-gradient(
+    358.89deg,
+    rgba(217, 217, 217, 0.65) -65.27%,
+    rgba(217, 217, 217, 0) 87.19%
+  );
 }
 .container-fluid {
   padding-left: 80px;
   padding-right: 80px;
   margin: 0px auto;
-
 }
 
 @media (prefers-color-scheme: dark) {
@@ -55,11 +57,11 @@ a {
 .Finda {
   position: relative;
 }
-.convenient{
+.convenient {
   padding: 0;
   position: relative;
 }
-.convenient .row{
+.convenient .row {
   padding: 0;
 }
 .line_s {
@@ -77,7 +79,6 @@ a {
   font-size: 14px;
 }
 
-
 @keyframes fadein {
   from {
     opacity: 0;
@@ -87,7 +88,6 @@ a {
   }
 }
 
-
 .fadein {
   opacity: 0;
   animation: fadein ease-in 1;
@@ -96,52 +96,52 @@ a {
 }
 
 .fadein--one {
-  animation-delay: .2s;
+  animation-delay: 0.2s;
 }
 
 .fadein--two {
-  animation-delay: .3s;
+  animation-delay: 0.3s;
 }
 
 .fadein--three {
-  animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 
 .fadein--four {
-  animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 
 .fadein--five {
-  animation-delay: .6s;
+  animation-delay: 0.6s;
 }
 
 .fadein--six {
-  animation-delay: .7s;
+  animation-delay: 0.7s;
 }
 
 @media screen and (max-width: 1700px) {
   .grsss {
     margin-top: 7em;
-}
-.main_container:after {
-  bottom: -8px;
-}
-.line_s img {
-  width: 3px;
-}
-.line_s {
-  top: 11em;
-}
-.line_s.vet {
-  top: 17em;
-}
+  }
+  .main_container:after {
+    bottom: -8px;
+  }
+  .line_s img {
+    width: 3px;
+  }
+  .line_s {
+    top: 11em;
+  }
+  .line_s.vet {
+    top: 17em;
+  }
 }
 @media screen and (max-width: 1500px) {
   .line_s img {
     width: 2px;
   }
   .line_s {
-    top:4em;
+    top: 4em;
   }
   .line_s.vet {
     top: 9em;
@@ -151,44 +151,44 @@ a {
   .container-fluid {
     padding-left: 50px;
     padding-right: 50px;
-}
-.convenient {
-  padding: 0;
-}
   }
-  @media screen and (max-width: 1200px) {
+  .convenient {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 1200px) {
   .line_s {
     top: 0em;
   }
   .line_s.vet {
     top: 5em;
+  }
 }
-}
-  @media screen and (max-width: 1023px) {
-    .container-fluid {
-      padding-left: 40px;
-      padding-right: 40px;
+@media screen and (max-width: 1023px) {
+  .container-fluid {
+    padding-left: 40px;
+    padding-right: 40px;
   }
   .convenient {
     padding: 0;
+  }
 }
-    }
-  @media screen and (max-width: 767px) {
-    .container-fluid {
-      padding-left: 15px;
-      padding-right: 15px;
+@media screen and (max-width: 767px) {
+  .container-fluid {
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .container-fluid.main_container.py-5 {
     padding-top: 10px !important;
-}
-.line_s img {
-display: none;
-}
-.line_s.vet {
-  display: none;
+  }
+  .line_s img {
+    display: none;
+  }
+  .line_s.vet {
+    display: none;
   }
   .All {
     margin: 14px 0 0px 0;
     font-size: 14px;
-}
+  }
 }
