--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -181,6 +181,9 @@
       top: -120px;
     }
   }
+  @media only screen and (max-width: 767px) {
+    display: none;
+  }
 }
 .vector1 {
   position: relative;
@@ -219,7 +222,7 @@
     }
   }
   @media only screen and (max-width: 767px) {
-    width: 372px;
+    width: 100%;
     h3 {
       font-size: 25px;
       line-height: 31px;
@@ -254,6 +257,19 @@
   @media only screen and (max-width: 1200px) {
     height: 513px;
   }
+  @media only screen and (max-width: 767px) {
+    border-radius: 40px;
+    img {
+      width: 100%;
+    }
+  }
+  @media only screen and (max-width: 575px) {
+    border-radius: 40px;
+    height: 340px;
+    img {
+      width: 100%;
+    }
+  }
 }
 .layout_box3 {
   width: 100%;
@@ -278,6 +294,10 @@
   }
   @media only screen and (max-width: 1200px) {
     height: 513px;
+  }
+  @media only screen and (max-width: 575px) {
+    height: 340px;
+    border-radius: 40px;
   }
 }
 
