--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -8,6 +8,7 @@ html,
 body {
   max-width: 100vw;
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
 body {
   overflow-x: hidden;
