--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -326,9 +326,13 @@
       height: auto;
       display: flex;
     }
+    a {
+      height: 100%;
+      display: block;
+    }
     img {
       width: 100%;
-      height: auto;
+      height: inherit;
     }
   }
   @media only screen and (max-width: 1700px) {
