--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -8,7 +8,7 @@ html,
 body {
   max-width: 100vw;
   font-family: "Montserrat", sans-serif;
-  scroll-behavior: smooth;
+  scroll-padding-top: 60px;
 }
 body {
   overflow-x: hidden;
